--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "events": "^1.1.0",
     "html-entities": "^1.2.0",
     "htmlparser2": "^3.9.0",
+    "react-native-youtube": "^1.0.0-beta.1",
     "stream": "0.0.2"
   },
   "peerDependencies": {
     "react": ">=16.0.0-alpha.26",
-    "react-native": ">=0.43.2",
-    "react-addons-shallow-compare": ">=15.3.2"
+    "react-addons-shallow-compare": ">=15.3.2",
+    "react-native": ">=0.43.2"
   }
 }
